namespace MongoDBDemoApp.Model.Place;

public class PlaceDto
{
    public string? Id { get; set; } = default!;
    public int PlaceNr { get; set; } = default!;
    public string? VendorId { get; set; } = default!;
}