export interface Employee {
    firstName: string,
    lastName: string
}

export class Employee implements Employee{
}