@startuml
left to right direction
class Vendor {
}
note left: Individual or Business

class Product {
}
note left: Only for one Vendor

class Customer {
}

class Order {
}

class Employee {
}


class Place {
}
note left: Stand place

Vendor ||--o{ Product
Vendor |o--|| Place
Vendor ||--|{ Employee

Order }o--o| Product
Customer |o--o{ Order


@enduml
